OXUI-859: fixes missing close button for paused compose windows on mobile

--- a/ui/apps/themes/components/window.less
+++ b/ui/apps/themes/components/window.less
@@ -350,7 +350,7 @@
         bottom: auto;
         margin-top: 8px;
         text-align: center;
-        &.message { margin: 0 16px; }
+        .message { margin: 0 16px 16px 16px; }
     }
 
     .first { margin-top: -20px; }
